--- a/1212.css
+++ b/1212.css
@@ -14,7 +14,7 @@ body {
 header {
     background-color: #003366;
     color: white;
-    padding: 10px 0;
+    padding: 3px;
     display: flex;
     padding: 20px;
     align-items: flex-start;
